<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        style="@style/TextViewContainer"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/nameLabel"
                android:text="@string/name"
                style="@style/MenuTextInput"
                />

            <TextView
                android:id="@+id/nameValue"
                style="@style/MenuTextInput"
                />
        </LinearLayout>

        <Button
            android:id="@+id/editBtnName"
            style="@style/EditButton"
            android:text="@string/edit" />
    </LinearLayout>

    <LinearLayout
        style="@style/TextViewContainer"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/addressLabel"
                android:text="@string/address"
                style="@style/MenuTextInput"
                />

            <TextView
                android:id="@+id/addressValue"
                style="@style/MenuTextInput"
                />
        </LinearLayout>

        <Button
            android:id="@+id/editBtnAddress"
            style="@style/EditButton"
            android:text="@string/edit" />
    </LinearLayout>

    <LinearLayout
        style="@style/TextViewContainer">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/commLabel"
                android:text="@string/comment"
                style="@style/MenuTextInput"
                />

            <TextView
                android:id="@+id/commValue"
                style="@style/MenuTextInput"
                />
        </LinearLayout>


        <Button
            android:id="@+id/editBtnComm"
            style="@style/EditButton"
            android:text="@string/edit" />
    </LinearLayout>
</LinearLayout>